# hash-bench

./: ACHIEVEMENT_NOTES.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
docs/: EXAMPLES_20260709.md  USAGE.md
src/hash_bench/: __init__.py  __main__.py  bench.py  cli.py
tests/: test_bench.py  test_bench_extra.py  test_blake2s.py  test_digest_hex.py  test_sha3.py  test_sha3_256.py  test_sha3_512.py  test_sha512.py  test_version.py
