[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hash-bench"
version = "0.1.0"
description = "Tiny micro-benchmark for hashlib algorithms (md5/sha1/sha256/blake2)"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["data-science", "education", "cli"]
license = { text = "MIT" }
authors = [{ name = "tapheret2" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
hash-bench = "hash_bench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
